Justifico los textos en las paginas

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <img src="./assets/img/background-2.webp" alt="Frame from the short film 'Liberty and Disorder,' showing a surveillance drone modeled and animated by Johann." class="side-image right-image">
         <section>
             <h1 class="whiteText">3D Animation Reel</h1>
-            <h3 class="whiteText w-75 mx-auto text-center"">Welcome to the heart of my creative world! Step into the captivating realm of 3D
-                animation as I proudly present my latest demo reel. <br>So, whether you're a fellow enthusiast, a
+            <h3 class="whiteText w-75 mx-auto text-justify"">Welcome to the heart of my creative world! Step into the captivating realm of 3D
+                animation as I proudly present my latest demo reel. So, whether you're a fellow enthusiast, a
                 potential collaborator, or simply someone who appreciates the magic of animation, I invite you to
                 immerse yourself in my world. Click play, sit back, and let the journey begin.
             </h3>
