--- a/pages/animviewpoint.html
+++ b/pages/animviewpoint.html
@@ -56,7 +56,7 @@
         <img src="../assets/img/background-6.webp" alt="This is a frame from Johann's animation depicting a soccer player and a goalkeeper during a penalty kick." class="side-image right-image">
         <section class="whiteText">
             <h1>The AnimViewpoint</h1>
-            <h3 class="w-75 mx-auto text-center">Dive into a collection of handpicked news and articles designed to
+            <h3 class="w-75 mx-auto text-justify">Dive into a collection of handpicked news and articles designed to
                 captivate
                 animation enthusiasts.
                 Stay ahead of the curve, explore emerging trends, and find inspiration within our carefully selected
