--- a/pages/work.html
+++ b/pages/work.html
@@ -23,7 +23,8 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/img/logo.webp" alt="Johann Paloma logo: Represents the initials 'J' and 'P', forming a unique and distinctive composition.">
+                    <img src="../assets/img/logo.webp"
+                        alt="Johann Paloma logo: Represents the initials 'J' and 'P', forming a unique and distinctive composition.">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,13 +53,17 @@
         </nav>
     </header>
     <main>
-        <img src="../assets/img/background-2.webp" alt="Frame from the short film 'Liberty and Disorder,' showing a surveillance drone modeled and animated by Johann." class="side-image left-image">
-        <img src="../assets/img/background-7.webp" alt="Frame from Johann's animated short film 'Felices Fiestas' featuring a smiling Christmas ornament." class="side-image right-image">
+        <img src="../assets/img/background-2.webp"
+            alt="Frame from the short film 'Liberty and Disorder,' showing a surveillance drone modeled and animated by Johann."
+            class="side-image left-image">
+        <img src="../assets/img/background-7.webp"
+            alt="Frame from Johann's animated short film 'Felices Fiestas' featuring a smiling Christmas ornament."
+            class="side-image right-image">
         <h1 class="whiteText">Previous Projects</h1>
 
         <section class="whiteText">
             <h2 class="fWeight-1 w-75 mx-auto text-center">Felices Fiestas</h2>
-            <h3 class="w-75 mx-auto text-center">This was my first approach to Autodesk Maya. As my thesis I decided to
+            <h3 class="w-75 mx-auto text-justify">This was my first approach to Autodesk Maya. As my thesis I decided to
                 write a
                 shortfilm which only could be done through animation. There were almost ten versions of the screenplay
                 and three of them got animated; the first as a trial run to see if I could do it, the second as a
@@ -68,13 +73,14 @@
         <section class=" videoSection mb-5 mx-auto">
             <div class="container">
                 <div class="videoWrapper">
-                    <iframe src="https://player.vimeo.com/video/347652410?h=17345d718f" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://player.vimeo.com/video/347652410?h=17345d718f" width="640" height="360"
+                        frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
-    </section>
+        </section>
         <section class="whiteText">
             <h2 class="fWeight-1 w-75 mx-auto mt-5 text-center">Libertad y Desorden</h2>
-            <h3 class="w-75 mx-auto text-center">Libertad y desorden is a short film written and directed by Christian
+            <h3 class="w-75 mx-auto text-justify">Libertad y desorden is a short film written and directed by Christian
                 Carvalho. He
                 came to me with the idea of a city surrounded by technology, thieves, and political abuses. We wanted to
                 picture how Bogotá, Colombia would be in the future and create vehicles and places in order to change
@@ -83,7 +89,10 @@
         <section class=" videoSection mt-5 mb-5 mx-auto">
             <div class="container">
                 <div class="videoWrapper">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/j17a2_eAoB8?si=iUr3qqIJjoF27oxH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/j17a2_eAoB8?si=iUr3qqIJjoF27oxH"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
                 </div>
             </div>
         </section>
