"Corregi etiquetas semanticas, y agrege filtro a imagenes de fondo"

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         <img src="./assets/img/background-2.webp" alt="Frame from the short film 'Liberty and Disorder,' showing a surveillance drone modeled and animated by Johann." class="side-image right-image">
         <section>
             <h1 class="whiteText">3D Animation Reel</h1>
-            <h3 class="whiteText w-75 mx-auto text-justify"">Welcome to the heart of my creative world! Step into the captivating realm of 3D
+            <p class="whiteText w-75 mx-auto text-justify">Welcome to the heart of my creative world! Step into the captivating realm of 3D
                 animation as I proudly present my latest demo reel. So, whether you're a fellow enthusiast, a
                 potential collaborator, or simply someone who appreciates the magic of animation, I invite you to
                 immerse yourself in my world. Click play, sit back, and let the journey begin.
-            </h3>
+            </p>
         </section>
         <section class=" videoSection mt-5 mx-auto">
                 <div class="container">
@@ -90,19 +90,19 @@
                         <h3>Navigation</h3>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link footerHover" href="../index.html">Demo Reel</a>
+                                <a class="nav-link footerHover" href="./index.html">Demo Reel</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link footerHover" href="./resume.html">Resume</a>
+                                <a class="nav-link footerHover" href="./pages/resume.html">Resume</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link footerHover" href="./work.html">Work</a>
+                                <a class="nav-link footerHover" href="./pages/work.html">Work</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link footerHover" href="./animviewpoint.html">The AnimViewpoint</a>
+                                <a class="nav-link footerHover" href="./pages/animviewpoint.html">The AnimViewpoint</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link footerHover" href="./contact.html">Contact</a>
+                                <a class="nav-link footerHover" href="./pages/contact.html">Contact</a>
                             </li>
                         </ul>
                     </section>
