--- a/pages/resume.html
+++ b/pages/resume.html
@@ -62,7 +62,7 @@
                     <h2 class="whiteText fWeight-1">Johann Palomá</h2>
                     <h3>About Me</h3>
                     <p>
-                        Johann Palomá, a Colombian native, ventured to London, Ontario, to pursue his passion for 3D
+                        A Colombian native, ventured to London, Ontario, to pursue his passion for 3D
                         animation and character design after studying Film and TV in Colombia.
                     </p>
                     <p>
