--- a/pages/work.html
+++ b/pages/work.html
@@ -63,12 +63,12 @@
 
         <section class="whiteText">
             <h2 class="fWeight-1 w-75 mx-auto text-center">Felices Fiestas</h2>
-            <h3 class="w-75 mx-auto text-justify">This was my first approach to Autodesk Maya. As my thesis I decided to
+            <p class="w-75 mx-auto">This was my first approach to Autodesk Maya. As my thesis I decided to
                 write a
                 shortfilm which only could be done through animation. There were almost ten versions of the screenplay
                 and three of them got animated; the first as a trial run to see if I could do it, the second as a
                 experiment of different techniques recently learned, and the third as the final result of two years of
-                writing, learning and exploring.</h3>
+                writing, learning and exploring.</p>
         </section>
         <section class=" videoSection mb-5 mx-auto">
             <div class="container">
@@ -80,11 +80,11 @@
         </section>
         <section class="whiteText">
             <h2 class="fWeight-1 w-75 mx-auto mt-5 text-center">Libertad y Desorden</h2>
-            <h3 class="w-75 mx-auto text-justify">Libertad y desorden is a short film written and directed by Christian
+            <p class="w-75 mx-auto">Libertad y desorden is a short film written and directed by Christian
                 Carvalho. He
                 came to me with the idea of a city surrounded by technology, thieves, and political abuses. We wanted to
                 picture how Bogotá, Colombia would be in the future and create vehicles and places in order to change
-                the city as we know it.</h3>
+                the city as we know it.</p>
         </section>
         <section class=" videoSection mt-5 mb-5 mx-auto">
             <div class="container">
